remove letter spacing to fix bug where glitch ligatures weren't showing in chromium

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,7 +44,6 @@ body {
     /* 15px */
     @apply text-[0.9375rem];
     @apply leading-[1.4];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -52,7 +51,6 @@ body {
     /* 18px */
     @apply text-[1.125rem];
     @apply leading-[1.4];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -60,7 +58,6 @@ body {
     /* 24px */
     @apply text-[1.5rem];
     @apply leading-[1.4];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -68,7 +65,6 @@ body {
     /* 34px */
     @apply text-[2.125rem];
     @apply leading-[1.2];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -76,7 +72,6 @@ body {
     /* 54px */
     @apply text-[3.375rem];
     @apply leading-[1.1];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -84,7 +79,6 @@ body {
     /* 72px */
     @apply text-[4.5rem];
     @apply leading-[1];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -92,7 +86,6 @@ body {
     /* 84px */
     @apply text-[5.25rem];
     @apply leading-[1];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -100,7 +93,6 @@ body {
     /* 114px */
     @apply text-[7.125rem];
     @apply leading-[1];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -108,7 +100,6 @@ body {
     /* 144px */
     @apply text-[9rem];
     @apply leading-[1];
-    @apply tracking-[0.01rem];
     @apply mb-4;
   }
 
@@ -117,7 +108,6 @@ body {
     @apply text-[0.9375rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -126,7 +116,6 @@ body {
     @apply text-[0.9375rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -135,7 +124,6 @@ body {
     @apply text-[1.125rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -144,7 +132,6 @@ body {
     @apply text-[1.5rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -153,7 +140,6 @@ body {
     @apply text-[2.125rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -162,7 +148,6 @@ body {
     @apply text-[3.375rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -171,7 +156,6 @@ body {
     @apply text-[4.5rem];
     @apply leading-[0.9];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -180,7 +164,6 @@ body {
     @apply text-[5.25rem];
     @apply leading-[0.85];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -189,7 +172,6 @@ body {
     @apply text-[7.125rem];
     @apply leading-[0.85];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 
@@ -198,7 +180,6 @@ body {
     @apply text-[9rem];
     @apply leading-[0.85];
     @apply uppercase;
-    @apply tracking-[0.01rem];
     font-variant-ligatures: normal;
   }
 }
